rpc/src/csrparser.cc

#line 1 "csrparser.rl"
/*
Copyright (c) 2008,2009, Beck David, Tamas Foldi

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions
are met:

1. Redistributions of source code must retain the above copyright
   notice, this list of conditions and the following disclaimer.
2. Redistributions in binary form must reproduce the above copyright
   notice, this list of conditions and the following disclaimer in the
   documentation and/or other materials provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

*/

#include <stdio.h>
#include <string.h>

#include "csrgen.hh"
#include "csrparser.hh"
#include "iface.hh"

const char * csl::rpc::token_type_name[] = {
  "unknown",
  "version",
  "name", 
  "namespace",
  "include",
  "function",
  "disposable function",
  "end function",
  "parameter modifier",
  "parameter type",
  "parameter name",
  "comment"
};

const char * csl::rpc::param_kind_name[] = { 
  "input", 
  "output", 
  "inout", 
  "exception" 
};


#line 198 "csrparser.rl"


namespace csl 
{
  namespace rpc
  {
    
#line 68 "csrparser.cc"
static const int csrgen_start = 94;
static const int csrgen_first_final = 94;
static const int csrgen_error = 0;

static const int csrgen_en_main = 94;


#line 205 "csrparser.rl"

    void csrparser::reset()
    {
      token_.type          = TT_UNKNOWN;
      token_.modifier      = MD_INPUT;
      token_.array_length  = 0;
    } 

    void csrparser::print_error() const
    {
      fprintf(stderr, "can not process file: parse error at line %d column %d\n",
          token_.curline,
          (token_.p-token_.ls) );
      if ( token_.p-token_.ls < 70 ) {
        char * errloc = strdup( token_.ls+1);
        int col = 0;
        for ( ; col < token_.pe - token_.ls ; col++ )
        {
          if ( errloc[col] == '\n' ) {
            errloc[col] = '\0';
            break;
          }
        }
        fprintf(stderr, "\n\"%s\"\n", errloc );
        free(errloc);
        for ( col = 0 ; col < token_.p-token_.ls ; col++ )
          fputc(' ', stderr);
        fprintf(stderr, "^---- here\n");
      }
    }

    void csrparser::save()
    {
      if ( (token_.p-token_.ts) == 0 || token_.type <= TT_UNKNOWN 
        || token_.type >= TT_LAST  )
      {
        return;
      }

      switch (token_.type) 
      {
        case TT_NAME:
          iface_.set_name(token_);
          break;
        case TT_NAMESPACE:
          iface_.set_namespc(token_);
          break;
        case TT_VERSION:
          iface_.set_version(token_);
          break;
        case TT_INCLUDE:
          iface_.add_include(token_);
          break;
        case TT_DISPOSABLE_FUNCTION:
        case TT_FUNCTION:
          iface_.add_function(token_);
          break;
        case TT_PARAM_TYPE:
          iface_.set_param_type(token_);
          break;
        case TT_PARAM_NAME:
          iface_.set_param_name(token_);
          break;
        default:
          break;
      }

    }

    csrparser::csrparser()
    {
      memset( &token_, 0, sizeof(token_) );
      
#line 150 "csrparser.cc"
	{
	 token_.cs = csrgen_start;
	}

#line 278 "csrparser.rl"
      reset();
      token_.curline = 1;
    }

    int csrparser::parse(char * start, char * end)
    {
      char * eof = NULL;

      token_.p = start;
      token_.pe = end;
      token_.ls = token_.p; 

      
#line 169 "csrparser.cc"
	{
	if ( (  token_.p) == ( token_.pe) )
		goto _test_eof;
	switch (  token_.cs )
	{
tr19:
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st94;
tr140:
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st94;
tr143:
#line 164 "csrparser.rl"
	{token_.type = TT_COMMENT;}
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st94;
tr144:
#line 164 "csrparser.rl"
	{token_.type = TT_COMMENT;}
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st94;
tr149:
#line 93 "csrparser.rl"
	{
    token_.type = TT_FUNCTION_END; 
    token_.ts = token_.p;
  }
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st94;
tr150:
#line 93 "csrparser.rl"
	{
    token_.type = TT_FUNCTION_END; 
    token_.ts = token_.p;
  }
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st94;
st94:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof94;
case 94:
#line 250 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto tr140;
		case 10: goto tr19;
		case 13: goto tr140;
		case 32: goto tr140;
		case 35: goto st1;
		case 47: goto tr141;
		case 95: goto tr109;
		case 100: goto st55;
	}
	if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto tr109;
	} else if ( (*(  token_.p)) >= 65 )
		goto tr109;
	goto tr0;
tr0:
#line 68 "csrparser.rl"
	{
    print_error();
  }
	goto st0;
#line 273 "csrparser.cc"
st0:
 token_.cs = 0;
	goto _out;
tr145:
#line 164 "csrparser.rl"
	{token_.type = TT_COMMENT;}
	goto st1;
tr151:
#line 93 "csrparser.rl"
	{
    token_.type = TT_FUNCTION_END; 
    token_.ts = token_.p;
  }
	goto st1;
st1:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof1;
case 1:
#line 292 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st1;
		case 13: goto st1;
		case 32: goto st1;
		case 105: goto st2;
		case 110: goto st16;
		case 118: goto st30;
	}
	goto tr0;
st2:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof2;
case 2:
	if ( (*(  token_.p)) == 110 )
		goto st3;
	goto tr0;
st3:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof3;
case 3:
	if ( (*(  token_.p)) == 99 )
		goto st4;
	goto tr0;
st4:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof4;
case 4:
	if ( (*(  token_.p)) == 108 )
		goto st5;
	goto tr0;
st5:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof5;
case 5:
	if ( (*(  token_.p)) == 117 )
		goto st6;
	goto tr0;
st6:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof6;
case 6:
	if ( (*(  token_.p)) == 100 )
		goto st7;
	goto tr0;
st7:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof7;
case 7:
	if ( (*(  token_.p)) == 101 )
		goto st8;
	goto tr0;
st8:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof8;
case 8:
	switch( (*(  token_.p)) ) {
		case 9: goto tr11;
		case 13: goto tr11;
		case 32: goto tr11;
	}
	goto tr0;
tr11:
#line 121 "csrparser.rl"
	{token_.type     = TT_INCLUDE;}
	goto st9;
st9:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof9;
case 9:
#line 362 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st9;
		case 13: goto st9;
		case 32: goto st9;
		case 34: goto tr13;
		case 60: goto tr14;
		case 76: goto tr15;
	}
	goto tr0;
tr13:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st10;
st10:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof10;
case 10:
#line 382 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 10: goto tr0;
		case 34: goto st11;
		case 92: goto st12;
	}
	goto st10;
st11:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof11;
case 11:
	switch( (*(  token_.p)) ) {
		case 9: goto st11;
		case 10: goto tr19;
		case 13: goto st11;
		case 32: goto st11;
	}
	goto tr0;
st12:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof12;
case 12:
	goto st10;
tr14:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st13;
st13:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof13;
case 13:
#line 415 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 10: goto tr0;
		case 62: goto st11;
		case 92: goto st14;
	}
	goto st13;
st14:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof14;
case 14:
	goto st13;
tr15:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st15;
st15:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof15;
case 15:
#line 437 "csrparser.cc"
	if ( (*(  token_.p)) == 34 )
		goto st10;
	goto tr0;
st16:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof16;
case 16:
	if ( (*(  token_.p)) == 97 )
		goto st17;
	goto tr0;
st17:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof17;
case 17:
	if ( (*(  token_.p)) == 109 )
		goto st18;
	goto tr0;
st18:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof18;
case 18:
	if ( (*(  token_.p)) == 101 )
		goto st19;
	goto tr0;
st19:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof19;
case 19:
	switch( (*(  token_.p)) ) {
		case 9: goto tr25;
		case 13: goto tr25;
		case 32: goto tr25;
		case 115: goto st22;
	}
	goto tr0;
tr25:
#line 122 "csrparser.rl"
	{token_.type     = TT_NAME;}
	goto st20;
st20:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof20;
case 20:
#line 481 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st20;
		case 13: goto st20;
		case 32: goto st20;
		case 95: goto tr28;
	}
	if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto tr28;
	} else if ( (*(  token_.p)) >= 65 )
		goto tr28;
	goto tr0;
tr28:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st21;
st21:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof21;
case 21:
#line 504 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st11;
		case 10: goto tr19;
		case 13: goto st11;
		case 32: goto st11;
		case 95: goto st21;
	}
	if ( (*(  token_.p)) < 65 ) {
		if ( 48 <= (*(  token_.p)) && (*(  token_.p)) <= 57 )
			goto st21;
	} else if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto st21;
	} else
		goto st21;
	goto tr0;
st22:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof22;
case 22:
	if ( (*(  token_.p)) == 112 )
		goto st23;
	goto tr0;
st23:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof23;
case 23:
	if ( (*(  token_.p)) == 97 )
		goto st24;
	goto tr0;
st24:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof24;
case 24:
	if ( (*(  token_.p)) == 99 )
		goto st25;
	goto tr0;
st25:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof25;
case 25:
	if ( (*(  token_.p)) == 101 )
		goto st26;
	goto tr0;
st26:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof26;
case 26:
	switch( (*(  token_.p)) ) {
		case 9: goto tr34;
		case 13: goto tr34;
		case 32: goto tr34;
	}
	goto tr0;
tr34:
#line 124 "csrparser.rl"
	{token_.type     = TT_NAMESPACE;}
	goto st27;
st27:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof27;
case 27:
#line 567 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st27;
		case 13: goto st27;
		case 32: goto st27;
		case 58: goto tr36;
		case 95: goto tr36;
	}
	if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto tr36;
	} else if ( (*(  token_.p)) >= 65 )
		goto tr36;
	goto tr0;
tr36:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st28;
st28:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof28;
case 28:
#line 591 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st11;
		case 10: goto tr19;
		case 13: goto st11;
		case 32: goto st28;
		case 58: goto st29;
		case 60: goto st29;
		case 62: goto st28;
		case 95: goto st28;
	}
	if ( (*(  token_.p)) < 65 ) {
		if ( 48 <= (*(  token_.p)) && (*(  token_.p)) <= 57 )
			goto st28;
	} else if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto st28;
	} else
		goto st28;
	goto tr0;
st29:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof29;
case 29:
	switch( (*(  token_.p)) ) {
		case 32: goto st29;
		case 58: goto st29;
		case 60: goto st29;
		case 62: goto st28;
		case 95: goto st28;
	}
	if ( (*(  token_.p)) < 65 ) {
		if ( 48 <= (*(  token_.p)) && (*(  token_.p)) <= 57 )
			goto st28;
	} else if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto st28;
	} else
		goto st28;
	goto tr0;
st30:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof30;
case 30:
	if ( (*(  token_.p)) == 101 )
		goto st31;
	goto tr0;
st31:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof31;
case 31:
	if ( (*(  token_.p)) == 114 )
		goto st32;
	goto tr0;
st32:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof32;
case 32:
	if ( (*(  token_.p)) == 115 )
		goto st33;
	goto tr0;
st33:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof33;
case 33:
	if ( (*(  token_.p)) == 105 )
		goto st34;
	goto tr0;
st34:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof34;
case 34:
	if ( (*(  token_.p)) == 111 )
		goto st35;
	goto tr0;
st35:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof35;
case 35:
	if ( (*(  token_.p)) == 110 )
		goto st36;
	goto tr0;
st36:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof36;
case 36:
	switch( (*(  token_.p)) ) {
		case 9: goto tr45;
		case 13: goto tr45;
		case 32: goto tr45;
	}
	goto tr0;
tr45:
#line 123 "csrparser.rl"
	{token_.type     = TT_VERSION;}
	goto st37;
st37:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof37;
case 37:
#line 691 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st37;
		case 13: goto st37;
		case 32: goto st37;
	}
	if ( 48 <= (*(  token_.p)) && (*(  token_.p)) <= 57 )
		goto tr47;
	goto tr0;
tr47:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st38;
st38:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof38;
case 38:
#line 710 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st11;
		case 10: goto tr19;
		case 13: goto st11;
		case 32: goto st11;
		case 46: goto st39;
	}
	if ( 48 <= (*(  token_.p)) && (*(  token_.p)) <= 57 )
		goto st38;
	goto tr0;
st39:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof39;
case 39:
	if ( 48 <= (*(  token_.p)) && (*(  token_.p)) <= 57 )
		goto st38;
	goto tr0;
tr141:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st40;
tr146:
#line 164 "csrparser.rl"
	{token_.type = TT_COMMENT;}
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st40;
tr152:
#line 93 "csrparser.rl"
	{
    token_.type = TT_FUNCTION_END; 
    token_.ts = token_.p;
  }
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st40;
st40:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof40;
case 40:
#line 757 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 42: goto st41;
		case 47: goto st93;
	}
	goto tr0;
tr52:
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
	goto st41;
st41:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof41;
case 41:
#line 774 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 10: goto tr52;
		case 42: goto st42;
	}
	goto st41;
st42:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof42;
case 42:
	switch( (*(  token_.p)) ) {
		case 10: goto tr52;
		case 42: goto st42;
		case 47: goto tr54;
	}
	goto st41;
tr139:
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st95;
tr54:
#line 77 "csrparser.rl"
	{
    save();
    reset();
  }
	goto st95;
st95:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof95;
case 95:
#line 813 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto tr143;
		case 10: goto tr144;
		case 13: goto tr143;
		case 32: goto tr143;
		case 35: goto tr145;
		case 47: goto tr146;
		case 95: goto tr147;
		case 100: goto tr148;
	}
	if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto tr147;
	} else if ( (*(  token_.p)) >= 65 )
		goto tr147;
	goto tr0;
tr109:
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st43;
tr147:
#line 164 "csrparser.rl"
	{token_.type = TT_COMMENT;}
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st43;
tr153:
#line 93 "csrparser.rl"
	{
    token_.type = TT_FUNCTION_END; 
    token_.ts = token_.p;
  }
#line 64 "csrparser.rl"
	{ 
    token_.ts = token_.p;
  }
	goto st43;
st43:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof43;
case 43:
#line 859 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto tr55;
		case 10: goto tr56;
		case 13: goto tr55;
		case 32: goto tr55;
		case 95: goto st43;
		case 123: goto tr58;
	}
	if ( (*(  token_.p)) < 65 ) {
		if ( 48 <= (*(  token_.p)) && (*(  token_.p)) <= 57 )
			goto st43;
	} else if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto st43;
	} else
		goto st43;
	goto tr0;
tr60:
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
	goto st44;
tr55:
#line 98 "csrparser.rl"
	{
    if ( token_.type != TT_DISPOSABLE_FUNCTION )
      token_.type = TT_FUNCTION;
    save();
  }
	goto st44;
tr56:
#line 98 "csrparser.rl"
	{
    if ( token_.type != TT_DISPOSABLE_FUNCTION )
      token_.type = TT_FUNCTION;
    save();
  }
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
	goto st44;
st44:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof44;
case 44:
#line 909 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st44;
		case 10: goto tr60;
		case 13: goto st44;
		case 32: goto st44;
		case 123: goto st45;
	}
	goto tr0;
tr62:
#line 72 "csrparser.rl"
	{
    token_.curline++;
    token_.ls = token_.p;
  }
	goto st45;
tr58:
#line 98 "csrparser.rl"
	{
    if ( token_.type != TT_DISPOSABLE_FUNCTION )
      token_.type = TT_FUNCTION;
    save();
  }
	goto st45;
tr77:
#line 88 "csrparser.rl"
	{
    token_.type = TT_PARAM_NAME;
    save();
  }
	goto st45;
tr92:
#line 138 "csrparser.rl"
	{ iface_.set_arry_len(token_.array_length); }
	goto st45;
st45:
	if ( ++(  token_.p) == ( token_.pe) )
		goto _test_eof45;
case 45:
#line 948 "csrparser.cc"
	switch( (*(  token_.p)) ) {
		case 9: goto st45;
		case 10: goto tr62;
		case 13: goto st45;
		case 32: goto st45;
		case 58: goto tr63;
		case 95: goto tr63;
		case 101: goto tr64;
		case 105: goto tr65;
		case 111: goto tr66;
	}
	if ( (*(  token_.p)) > 90 ) {
		if ( 97 <= (*(  token_.p)) && (*(  token_.p)) <= 122 )
			goto tr63;
	} else if ( (*(  token_.p)) >= 65 )
